@@ -1,3 +1,14 @@
+2009-02-12  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/data/general/DatasetUtilities.java
+    (sampleFunction2D): Delegate to new method,
+    (sampleFunction2DToSeries): New method,
+    * source/org/jfree/data/function/NormalDistributionFunction2D.java
+    (factor): New field,
+    (denominator): Likewise,
+    (NormalDistributionFunction2D): Initialise new fields,
+    (getValue): Use precomputed constants.
+
 2009-02-10  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/block/LabelBlock.java
